syntax = "proto3";

package searchplatform.common;

option go_package = "github.com/Adithya-Monish-Kumar-K/Distributed-Search-Analytics-Platform/pkg/proto/common";

// Pagination controls limit/offset for list endpoints.
message Pagination {
  int32 limit  = 1;
  int32 offset = 2;
}

// Timestamp wraps a Unix epoch in seconds + nanos.
message Timestamp {
  int64 seconds = 1;
  int32 nanos   = 2;
}

// Status enumerates document lifecycle states.
enum DocumentStatus {
  DOCUMENT_STATUS_UNSPECIFIED = 0;
  DOCUMENT_STATUS_PENDING     = 1;
  DOCUMENT_STATUS_INDEXING    = 2;
  DOCUMENT_STATUS_INDEXED     = 3;
  DOCUMENT_STATUS_FAILED      = 4;
  DOCUMENT_STATUS_DELETED     = 5;
}

// Document is the core document representation across services.
message Document {
  string         id           = 1;
  string         title        = 2;
  string         body         = 3;
  string         content_hash = 4;
  int32          content_size = 5;
  int32          shard_id     = 6;
  DocumentStatus status       = 7;
  Timestamp      created_at   = 8;
  Timestamp      indexed_at   = 9;
}

// HealthCheckRequest / Response for service health probes.
message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN         = 0;
    SERVING         = 1;
    NOT_SERVING     = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}
